refactor(core): 迁移至Forge1.20.1